--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -48,7 +48,7 @@ jobs:
         run: sh compile.sh
 
       - name: Release and Upload Assets
-        uses: zgm4z/action-gh-release@v1
+        uses: softprops/action-gh-release@v1
         with:
           files: "*.ipk"
         env:
