change openwrt version to 19.07.7

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,7 +15,7 @@ jobs:
         include:
           - arch: mipsel_24kc
             sdk_url_path: https://archive.openwrt.org/releases/19.07.7/targets/ramips/mt7621
-            sdk_name: -sdk-ramips-mt7620_
+            sdk_name: -sdk-19.07.7-ramips-mt7621_
     env:
       SDK_URL_PATH: ${{ matrix.sdk_url_path }}
       SDK_NAME: ${{ matrix.sdk_name }}
